--- a/style.css
+++ b/style.css
@@ -68,25 +68,24 @@ header nav ul li a:hover {
   background-position: center;
   padding: 100px 20px;
   text-align: center;
-  height: 32rem;
+  height: 30rem;
   width: auto;
 }
 
 #home h2 {
-  font-size: 3rem;
-  color: var(--text-color);
+   color: var(--text-color);
 }
 
 #home p {
-  font-size: 2rem;
   margin: 20px 0;
 }
+
 #primeiraFrase {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 #primeiroParagrafo {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .button {
@@ -94,7 +93,7 @@ header nav ul li a:hover {
   padding: 10px 20px;
   color: var(--text-color);
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.2rem;
   border-radius: 5px;
   transition: 0.3s ease;
 }
@@ -116,7 +115,7 @@ header nav ul li a:hover {
 }
 
 .frasess {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin-top: 1rem;
 }
 
@@ -319,8 +318,9 @@ header nav ul li a:hover {
     }  
     
     nav.menuLateral:hover {
-      width: 7rem;
-      height: 100rem; 
+      background-color: #1a1a1a;
+      width: 7.5rem;
+      height: 23rem; 
       
     } 
       
@@ -330,7 +330,8 @@ header nav ul li a:hover {
     }
     .btnExpandir > i {
       color: white; 
-      font-size: 1.5rem;
+      font-weight: bold;
+      font-size: 1.7rem;
       cursor: pointer;
       
     }
@@ -372,7 +373,14 @@ header nav ul li a:hover {
 
 
 
-
+    #primeiraFrase {
+      font-size: 1.2rem;
+    }
+    
+    #primeiroParagrafo {
+      font-size: 0.9rem;
+      margin-top: 10px;
+    }
     
 
     #home {
@@ -402,18 +410,26 @@ header nav ul li a:hover {
       }
 
 #servicos-destaque h2 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     margin-bottom: 30px;
   }
 
   
 #servicos-destaque .service h3 {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: var(--text-color);
     margin-bottom: 1rem;
   }
 
-  
+.frasess {
+    font-size: 1rem;
+    margin-top: 0.5rem;
+  }
+
+#depoimentos {
+  width: 100%;
+}
+
 
 
     header nav ul {
@@ -478,6 +494,45 @@ header nav ul li a:hover {
   .menu ul li a {
     font-size: 1rem; /* Fontes menores nos links do menu */
   }
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+#foh3 {
+  font-size: 1rem;
+  margin-right: 10rem;
+}
+
+#foEnd {
+  font-size: 1rem;
+  margin-right: 10rem;
+}
+
+#foTel {
+  font-size: 1rem;
+  margin-right: 10rem;
+
+}
+
+#foemail {
+  font-size: 0.8rem;
+  margin-right: 10rem;
+
+}
+
+.social-icons {
+  margin-right: 10rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#siganos {
+  font-size: 1.5rem;
+  margin-right: 10rem;
+
+}
 
   .footer-content {
     flex-direction: column;
